# LQR

./: CMakeLists.txt  README.md  package.xml
include/lqr/: lqr.h  ros2_lqr.h
scenes/: irb.ttt
scripts/: irb.lua
src/: lqr.cpp  main.cpp  ros2_lqr.cpp  ros2test.cpp  test.cpp
